--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 {{title}}
-<!--<app-menu></app-menu>-->
-<app-user-list></app-user-list>
+<app-menu></app-menu>
+<nav>
+  <div><a routerLink="/users"> Users </a></div>
+  <div><a routerLink="/groups"> Groups </a></div>
+</nav>
+<router-outlet></router-outlet>
+
