--- a/src/app/input-search/input-search.component.html
+++ b/src/app/input-search/input-search.component.html
@@ -1,2 +1,5 @@
-<input type="text" (keyup) = "getKeyWord($event)">
-<h1>{{message}}</h1>
+<div>
+  <label>{{message}}  </label>
+  <input type="text" (keyup) = "getKeyWord($event)">
+</div>
+
