--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-md-8">
 <!--        <input type="text" (keyup)="search($event)">-->
-        <app-input-search (keyWord)="search($event)" message="textInput"></app-input-search>
+        <app-input-search (keyWord)="search($event)" message="Search"></app-input-search>
       </div>
     </div>
   </div>
